4.3 2018-10-04
~~~~~~~~~~~~~~

* Added muninn-summary to display aggregate statistics.

* Removed muninn-search '-s' option in favor of muninn-summary.

* Fixed initialization of database when using sqlite backend.

* Strip operation now automatically restricts itself to products with a
  non-empty archive_path.

4.2 2018-06-12
~~~~~~~~~~~~~~

* Added -f/--force option to muninn-ingest.

* Improved formatting of duration in muninn-search summary output.

* Added optional progress bars to muninn-update (requires 'tqdm' package).

* Added --parallel and --keep options to muninn-update.

* Several fixes for muninn-search --paths.

* Archive.export() now returns the list of paths of the exported products. The
  `export_` functions in the product type plugins must return the path of the
  exported product.

* Fixed issue where the database connection was not properly cleaned up when
  an error was raised during a database commit/rollback.

* Fixed issue where muninn-prepare --dryrun would not produce output for
  sqlite if the database file did not exist yet.

* Fixed issue where 'active' state was not always reset when a muninn-pull
  failed.

* Improve handling of creating tags/links that already exist
  (postgresql will now only raise an exception for contention cases).

* Added check on startup to verify that all mandatory attributes/methods are
  available for each product type plugin.

* Several smaller fixes (including Python3 compatibility).

4.1 2017-11-16
~~~~~~~~~~~~~~

* Added support for Python 3.

* Dropped support for spatialite 3.1 and earlier. spatialite 4.0.0 or higher
  is now required (which requires a version of sqlite3 that support
  extensions). Support for pyspatialite, which only worked with spatialite
  3.1, has been dropped. pysqlite2 is now the preferred module for sqlite
  support.

* Muninn now supports custom remote backends (used for muninn-pull).
  The ecmwfapi pull support has now been removed from the core muninn code and