@@ -1,3 +1,5 @@
+* Added --processes option to muninn-update.
+
 4.3 2018-10-04
 ~~~~~~~~~~~~~~
 
